--- a/footstone-cache/cache-spring-boot-test/pom.xml
+++ b/footstone-cache/cache-spring-boot-test/pom.xml
@@ -6,20 +6,13 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>footstone</artifactId>
+        <artifactId>footstone-cache</artifactId>
         <groupId>com.yunjia</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>footstone-id-generator</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>idgenerator-spring-boot-autoconfigure</module>
-        <module>idgenerator-spring-boot-starter</module>
-        <module>idgenerator-spring-boot-test</module>
-    </modules>
+    <artifactId>cache-spring-boot-test</artifactId>
 
 
 </project>
