--- a/footstone-common/pom.xml
+++ b/footstone-common/pom.xml
@@ -85,6 +85,12 @@
         </dependency>
         <!--*****************log end*********************-->
 
+        <!-- https://mvnrepository.com/artifact/com.alibaba/transmittable-thread-local -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
