--- a/footstone-cache/cache-spring-boot-autoconfigure/pom.xml
+++ b/footstone-cache/cache-spring-boot-autoconfigure/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <artifactId>footstone-cache</artifactId>
         <groupId>com.yunjia</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
